<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.MatchDetailActivity"
    tools:showIn="@layout/activity_match_detail">

    <TextView
        android:id="@+id/match_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/TextMatchDetailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/match_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/match_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/static_vs"
        style="@style/TextMatchDetailTitle"
        android:text="@string/static_vs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_time" />

    <TextView
        android:id="@+id/home_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/mock_score"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/static_vs"
        app:layout_constraintEnd_toStartOf="@+id/static_vs"
        app:layout_constraintTop_toTopOf="@+id/static_vs" />

    <TextView
        android:id="@+id/away_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mock_score"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/static_vs"
        app:layout_constraintStart_toEndOf="@+id/static_vs"
        app:layout_constraintTop_toTopOf="@+id/static_vs" />

    <ImageView
        android:id="@+id/home_badge"
        style="@style/ImageBadge"
        android:contentDescription="@string/home_badge_title"
        app:layout_constraintBottom_toBottomOf="@+id/home_score"
        app:layout_constraintEnd_toStartOf="@+id/home_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_score" />

    <ImageView
        android:id="@+id/away_badge"
        style="@style/ImageBadge"
        android:contentDescription="@string/away_badge_title"
        app:layout_constraintBottom_toBottomOf="@+id/away_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/away_score"
        app:layout_constraintTop_toTopOf="@+id/away_score" />

    <TextView
        android:id="@+id/home_team"
        style="@style/TextTeamName"
        app:layout_constraintEnd_toEndOf="@+id/home_badge"
        app:layout_constraintStart_toStartOf="@+id/home_badge"
        app:layout_constraintTop_toBottomOf="@+id/home_badge" />

    <TextView
        android:id="@+id/away_team"
        style="@style/TextTeamName"
        app:layout_constraintEnd_toEndOf="@+id/away_badge"
        app:layout_constraintStart_toStartOf="@+id/away_badge"
        app:layout_constraintTop_toBottomOf="@+id/away_badge" />

    <View
        android:id="@+id/view"
        style="@style/LineSpacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_team" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/const_goals"
        style="@style/LayoutMatchContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_title"
            style="@style/TextMatchDetailTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/home_goal_details"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goals" />

        <TextView
            android:id="@+id/away_goal_details"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goals" />
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/shots_title"
        style="@style/TextMatchDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shots_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_goals" />

    <TextView
        android:id="@+id/home_shots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mock_score"
        app:layout_constraintBottom_toBottomOf="@+id/shots_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shots_title" />

    <TextView
        android:id="@+id/away_shots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/mock_score"
        app:layout_constraintBottom_toBottomOf="@+id/shots_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shots_title" />

    <View
        android:id="@+id/view2"
        style="@style/LineSpacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shots_title" />

    <TextView
        android:id="@+id/goal_keeper_title"
        android:text="@string/goal_keeper_title"
        style="@style/TextMatchDetailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineups_title" />

    <TextView
        android:id="@+id/home_gk"
        style="@style/TextLineUpsHome"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/goal_keeper_title" />

    <TextView
        android:id="@+id/away_gk"
        style="@style/TextLineUpsAway"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/goal_keeper_title" />

    <TextView
        android:id="@+id/lineups_title"
        style="@style/TextMatchDetailTitle"
        android:text="@string/lineups_title"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/const_defense"
        style="@style/LayoutMatchContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goal_keeper_title">


        <TextView
            android:id="@+id/defense_title"
            android:text="@string/defense_title"
            style="@style/TextMatchDetailTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_defense"
            style="@style/TextLineUpsHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/defense_title" />

        <TextView
            android:id="@+id/away_defense"
            style="@style/TextLineUpsAway"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/defense_title" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/const_midfield"
        style="@style/LayoutMatchContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_defense">

        <TextView
            android:id="@+id/midfield_title"
            style="@style/TextMatchDetailTitle"
            android:text="@string/midfield_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_midfield"
            style="@style/TextLineUpsHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/midfield_title" />

        <TextView
            android:id="@+id/away_midfield"
            style="@style/TextLineUpsAway"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/midfield_title" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/const_forward"
        style="@style/LayoutMatchContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_midfield">

        <TextView
            android:id="@+id/forward_title"
            style="@style/TextMatchDetailTitle"
            android:text="@string/forward_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_forward"
            style="@style/TextLineUpsHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/forward_title" />

        <TextView
            android:id="@+id/away_forward"
            style="@style/TextLineUpsAway"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/forward_title" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/substitutes_title"
        style="@style/TextMatchDetailTitle"
        android:text="@string/substitutes_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_forward" />

    <TextView
        android:id="@+id/home_substitutes"
        style="@style/TextLineUpsHome"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/substitutes_title" />

    <TextView
        android:id="@+id/away_substitutes"
        style="@style/TextLineUpsAway"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/substitutes_title" />

</android.support.constraint.ConstraintLayout>